# free-storage-site

./: .gitignore  Cargo.toml  Dockerfile
client/: Cargo.toml
client/src/: index.html  lib.rs
server/: Cargo.toml  build.rs
server/src/: frontend.rs  main.rs
src/: index.html  login.html  main.rs
