[package]
name = "site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
free-storage = { git = "https://github.com/free-storage-org/free-storage" }
axum = { version = "0.5", features = ["ws"] }
tokio = { version = "1.18", features = [
    "rt-multi-thread",
    "macros",
    "tracing",
] }
dotenv = "0.15"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmp-serde = "1.1"
serde = "1.0"
serde_qs = "0.10"

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
strip = true
