[package]
name = "client"
version = "0.1.0"
authors = ["Jay Jackson <jj@jj.is-a.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

yew = "0.19"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = "0.4"

web-sys = { version = "0.3", features = ["Window"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
